[gd_scene load_steps=12 format=3 uid="uid://bywlgg52wf8o7"]

[ext_resource type="Texture2D" uid="uid://dwn8wsfttcx63" path="res://assert/UI/backgound_game.png" id="1_45di0"]
[ext_resource type="Script" uid="uid://cfdgmmssmod66" path="res://scripts/startgame.gd" id="1_npq8u"]
[ext_resource type="Texture2D" uid="uid://bvpki77t00lh2" path="res://assert/UI/play.png" id="2_npq8u"]
[ext_resource type="Texture2D" uid="uid://cl477ck3oltst" path="res://assert/UI/close.png" id="3_oa208"]
[ext_resource type="FontFile" uid="uid://d2bt6csnbt3pq" path="res://assert/font/Minecraft.ttf" id="4_njgub"]
[ext_resource type="Texture2D" uid="uid://bej4yycbugkfv" path="res://assert/UI/play_press.png" id="5_gspil"]
[ext_resource type="Texture2D" uid="uid://bky8eqrsjqrug" path="res://assert/UI/play_hover.png" id="6_7o4dx"]
[ext_resource type="AudioStream" uid="uid://dtqnufet6l6d1" path="res://assert/song/click_sound.mp3" id="7_efl7m"]
[ext_resource type="Texture2D" uid="uid://oyw782dfepci" path="res://assert/UI/close_press.png" id="8_efl7m"]
[ext_resource type="Texture2D" uid="uid://bqque144m5gde" path="res://assert/UI/close_hover.png" id="9_k4s6j"]
[ext_resource type="AudioStream" uid="uid://bj3j7dbvtqb6c" path="res://assert/song/start_game_song.mp3" id="10_7o4dx"]

[node name="startgame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_npq8u")

[node name="BackgoundGame" type="Sprite2D" parent="."]
position = Vector2(984, 544)
scale = Vector2(1.285, 1.12994)
texture = ExtResource("1_45di0")

[node name="GameName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -260.0
offset_right = 264.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.28485, 0.28485, 0.28485, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_njgub")
theme_override_font_sizes/font_size = 80
text = "Game Name"

[node name="StartButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -144.0
offset_top = -576.0
offset_right = 287.0
offset_bottom = -406.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("2_npq8u")
texture_pressed = ExtResource("5_gspil")
texture_hover = ExtResource("6_7o4dx")
stretch_mode = 3

[node name="CloseButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 132.0
offset_right = 288.0
offset_bottom = 284.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("3_oa208")
texture_pressed = ExtResource("8_efl7m")
texture_hover = ExtResource("9_k4s6j")
stretch_mode = 3

[node name="StartGameSong" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-216, 424)
stream = ExtResource("10_7o4dx")
autoplay = true
parameters/looping = true

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-152, 672)
stream = ExtResource("7_efl7m")
